--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,11 @@ footer {
   #headtainer {
     width: 640px;
   }
+
+  .profilepic {
+    width: 50%;
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 640px) {
@@ -213,5 +218,10 @@ footer {
 
   header {
     position: static;
+  }
+
+  .profilepic {
+    width: 100%;
+    height: auto;
   }
 }
